# gaming-minutes

./: .gitignore  .mcpbignore  AGENTS.md  CLAUDE.md  Cargo.toml  NOTICE  PLAN.md  PLAN.md.live-coach  README.md  TODOS.md  manifest.json  manifest.mcpb.json
.agents/: napkin.md
.beads/: config.yaml  issues.jsonl
.cargo/: config.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
.opencode/commands/: minutes-graph.md
crates/cli/: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/mcp/: package-lock.json  package.json
crates/sdk/: package.json
crates/whisper-guard/: Cargo.toml
crates/whisper-guard/src/: lib.rs  segments.rs
docs/: CALL-CAPTURE-HANDOFF-2026-04-08.md  CONFIG.md  DEBUG-DICTATION-HOTKEY.md  DESKTOP-DEVELOPMENT.md  HOTKEY-BEHAVIOR.md  PARAKEET.md  PRE-RELEASE-CHECKLIST.md  RELEASE-WINDOWS.md  SKILL-TEMPLATE-INTERACTIVE.md
docs/designs/: proper-name-eval-gate-2026-04-15.md
docs/eval/: results-v0.1-graded.md
docs/plans/: 2026-04-19-minutes-segment-cli-design.md  2026-04-19-minutes-segment-cli-plan.md
scripts/: build.sh  calendar-events.swift  check-agents-sync.sh  check_mcpb_bundle.sh  extract_segment_clips.sh  generate_llms_txt.mjs  install-dev-app.sh  sync_site_release_version.mjs
site/: next.config.ts  package-lock.json  package.json
site/app/: globals.css  layout.tsx  page.tsx
site/components/: conversation-topology.tsx  copy-button.tsx
site/lib/: release.ts
site/public/: llms-full.txt  llms.txt
tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json
(+87 files in other folders)
